fixed overflow

--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    overflow-x: hidden;
+}
+
 .font-display{
     font-family: 'Playfair Display', serif;
 
